; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revert.c_revert_state_cleanup.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revert.c_revert_state_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_REVERT_HEAD_FILE = common dso_local global i8* null, align 8
@GIT_MERGE_MSG_FILE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @revert_state_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @revert_state_cleanup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [2 x i8*], align 16
  store i32* %0, i32** %2, align 8
  %4 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  %5 = load i8*, i8** @GIT_REVERT_HEAD_FILE, align 8
  store i8* %5, i8** %4, align 8
  %6 = getelementptr inbounds i8*, i8** %4, i64 1
  %7 = load i8*, i8** @GIT_MERGE_MSG_FILE, align 8
  store i8* %7, i8** %6, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  %10 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  %11 = call i32 @ARRAY_SIZE(i8** %10)
  %12 = call i32 @git_repository__cleanup_files(i32* %8, i8** %9, i32 %11)
  ret i32 %12
}

declare dso_local i32 @git_repository__cleanup_files(i32*, i8**, i32) #1

declare dso_local i32 @ARRAY_SIZE(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
